--- a/www/assets/css/main_new.css
+++ b/www/assets/css/main_new.css
@@ -47,7 +47,7 @@ h1, h2, h3, h4, h5, h6 {
     justify-content: center;
     width: 100%;
     height: 100vh;
-    background: url('https://i.ibb.co/92w5hwz/bgwintermodpack.webp');
+    background: url('../../images/bgspringmodpack.webp');
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
