Load image from local storage (branding)

--- a/www/assets/css/branding.css
+++ b/www/assets/css/branding.css
@@ -1,5 +1,5 @@
 body {
-    background: url('https://i.ibb.co/b6dyqrd/epass.webp');
+    background: url('../../images/documents.webp');
     font-family: 'Montserrat';
     overflow: hidden;
     margin: 0;
